<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/tvLabel"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
android:orientation="vertical">

    <include
        android:id="@+id/actionbar"
        layout="@layout/actionbar" />



<TextView
    android:id="@+id/tvTitulo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginBottom="40sp"
    android:gravity="center"
    android:text="@string/titulo"
    android:textSize="30dp"
    android:layout_marginTop="30dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvMaterial"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:autofillHints="username"
            android:background="@drawable/borde_boton"
            android:hint="@string/Nombre"
            android:inputType="textWebEditText|text"
            android:textSize="20dp"
            android:ems="10"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvMaterial3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:autofillHints="username"
        android:background="@drawable/borde_boton"
        android:hint="@string/email"
        android:inputType="textWebEditText|text"
        android:textSize="20dp"
        android:ems="10"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tvMaterial4"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <EditText
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:autofillHints="username"
        android:background="@drawable/borde_boton"
        android:hint="@string/descrip"
        android:inputType="textWebEditText|text"
        android:textSize="20dp"
        android:ems="10"/>

    </com.google.android.material.textfield.TextInputLayout>

<Button
    android:id="@+id/button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/boton"
    android:layout_marginTop="40dp"
    android:theme="@style/MiBotonRaised"
    android:layout_margin="20dp"/>


</LinearLayout>